--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: gWidgets2tcltk
-Version: 1.0-2
-Title: Toolkit implementation of gWidgets2 for tcltk package
+Version: 1.0-3
+Title: Toolkit Implementation of gWidgets2 for tcltk
 Author: John Verzani
 Maintainer: John Verzani <jverzani@gmail.com>
 URL: https://github.com/jverzani/gWidgets2tcltk
 Depends: R (>= 2.12.0), methods, digest, memoise, tcltk(>= 2.7.0),
         gWidgets2
 Suggests: testthat
-Description: Port of the gWidgets2 API to the tcltk
+Description: Port of the gWidgets2 API for the tcltk
     package.
 License: GPL (>= 2)
 LazyLoad: yes
@@ -21,7 +21,7 @@ Collate: 'gWidgets2tcltk-package.R' 'List.R' 'misc.R' 'tcltk-misc.R'
         'gslider.R' 'gspinbutton.R' 'gstackwidget.R' 'gstatusbar.R'
         'gtext.R' 'gtimer.R' 'gtoolbar.R' 'gtree.R' 'gwindow.R'
         'icons.R' 'zzz.R' 'gvarbrowser.R' 'tk2tip.R' 'gprogressbar.R'
-Packaged: 2013-10-29 15:17:06 UTC; verzani
+Packaged: 2014-12-06 16:31:06 UTC; verzani
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-10-29 18:04:24
+Date/Publication: 2014-12-06 17:38:33
